labanGG/kubernetes-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iscscontainer-webapp-service
spec:
  selector:
    app: iscscontainer-webapp
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP  # Exposes the app internally
